--- a/index.html
+++ b/index.html
@@ -52,19 +52,17 @@
 							<!-- Habilidades -->
 								<section>
 									<header class="major">
-										<h2>Habilidades</h2>
+										<h2>Conhecimento Técnico</h2>
 									</header>
 									<div class="features">
 										<article>
 											<span class="icon fa-gem"></span>
 											<div class="content">
-												<h3>Linguagens de Programação e Banco de Dados
+												<h3>Programação e Banco de Dados
 												</h3>
 												<ul>
-													<li>Python com foco em análise de dados</li>
-													<li>Web scraping com Python</li>
-													<li>SQL para extração de dados</li>
-													<li>Banco de Dados, PostgreSQL</li>
+													<li>Programação: Python, Pandas</li>
+													<li>Banco de Dados: SQL, DBeaver, PostgreSQL</li>
 												</ul>											</div>
 										</article>
 										<article>
@@ -87,10 +85,10 @@
 										<article>
 											<span class="icon solid fa-signal"></span>
 											<div class="content">
-												<h3>Engenharia de Software</h3>
+												<h3>Cloud</h3>
 												<ul>
-													<li>Github</li>
-													<li>Streamlit</li>
+													<li>Projetos: Github</li>
+													<li>Aplicativos: Streamlit</li>
 												</ul>											</div>
 										</article>
 									</div>
@@ -122,10 +120,10 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<h3>Desenvolvimento de um dashboard estratégico para uma empresa.</h3>
-											<p>Programação, técnicas de manipulação de dados, 
+											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
 												junto com ferramentas de desenvolvimento web como Streamlit e Github, 
-												foram utilizados para desenvolver um painel gerencial 
+												foram utilizados para criar um painel gerencial 
 												com as principais métricas de uma empresa marketplace 
 												de delivery de comida na India.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud 
@@ -142,7 +140,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" alt="" /></a>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
 											</p>
