--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" width="300" alt="Curry" /></a>
 											<h3>Desenvolvimento de um dashboard estratégico para uma empresa.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
@@ -140,7 +140,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" alt="" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" width="300" alt="" /></a>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
 											</p>
