--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<div class="posts">
 										<article>
 											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" width="300" alt="Curry" /></a>
-											<h3>Desenvolvimento de um dashboard estratégico para uma empresa.</h3>
+											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
 												junto com ferramentas de desenvolvimento web como Streamlit e Github, 
