--- a/index.html
+++ b/index.html
@@ -99,16 +99,15 @@
 									<header class="major">
 										<h2>Experiência</h2>
 									</header>
-
 									<!-- Content -->
-										<h3 id="content">Ciência de Dados</h3>
-										<p>Prac ladipiscing adipiscing lorem ipsum dolor sit amet nullam veroeros adipiscing.</p>
+										<h3 id="content">1. Ciência de Dados</h3>
+										<p>Proeros adipiscing.</p>
 										<h3 id="content"></h3>
 										<p>Esterfiestidor
 											conrelatórios e métricateakholder".</p>
-										<h3 id="content">letos de Ciência de Dados</h3>
+										<h3 id="content">2. letos de Ciência de Dados</h3>
 										<p>Pra sit amet nullam veroeros adipiscing.</p>
-										<h3 id="content">35345ncia de Dados</h3>
+										<h3 id="content">3. 5345ncia de Dados</h3>
 										<p>sdfsdfsdfsdfllpiscing.</p>
 								</section>
 							<!-- Projetos -->
@@ -118,7 +117,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" width="300" alt="Curry" /></a>
+											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" width="200" alt="Curry" /></a>
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
@@ -140,7 +139,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" width="300" alt="" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" width="50" alt="" /></a>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
 											</p>
