--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" width="200" alt="Curry" /></a>
+											<a href="#" class="image"><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="width: 300px; height: 300px" alt="Curry" /></a>
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
@@ -139,7 +139,7 @@
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" width="50" alt="" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="width: 300px; height: 300px" alt="" /></a>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
 											</p>
@@ -164,7 +164,8 @@
 									<h4>Sinta-se a vontade para entrar em contato comigo por alguma dessas opções:</h4><br>
 
 									<ul class="contact">
-										<li class="icon brands fa-linkedin"> <a href="https://www.linkedin.com/in/c%C3%A1ssio-c%C3%A2ndido-ribeiro-806353258/"> Cássio Cândido Ribeiro </a> </li>
+										<li class="icon brands fa-linkedin"> <a href="https://www.linkedin.com/in/cassiocandidoribeiro/"> Link do meu LinkedIn </a> </li>
+										<li class="fa-brands fa-github"> <a href="https://github.com/CassioCandidoRibeiro"> Link do meu Github </a> </li>
 										<li class="icon solid fa-envelope"> <a href="mailto:cassiocribeiro@gmail.com"> cassiocribeiro@gmail.com </a> </li>
 									</ul>
 
