--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Sejam bem-vindos ao meu portfólio de projetos!</h1>
+											<h1>Bem-vindos ao meu portfólio de projetos!</h1>
 										</header>
 									</div>
 								</section>
