--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud 
 												e disponível através de um link web. O painel pode ser acessado por 
 												qualquer dispositivo conectado na internet.</p>
-											<h4>As ferramentas utilizadas foram:</h4>
+											<h4>Ferramentas utilizadas:</h4>
 											<ul>
 												<li>Extração: Kaggle</li>
 												<li>Transformação: Python, Pandas, Plotly, Folium, Geopy, Streamlit</li>
