--- a/index.html
+++ b/index.html
@@ -130,10 +130,9 @@
 												<li>Carga: Streamlit Cloud, Github</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Saiba mais</a></li>
+												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Clique aqui para interagir com o aplicativo</a></li>
 											</ul>
 										</article>
-										
 										
 										<article>
 											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 100" alt="Imagem" /></a>
@@ -142,9 +141,9 @@
 											</p>
 											<h4>Ferramentas utilizadas:</h4>
 											<ul>
-												<li>dfsdgdfsdg</li>
-												<li>khkhjkjsdgsdgs</li>
-												<li>bnmbnm567sdgseg4hh4</li>
+												<li>Extração: xxxxxx</li>
+												<li>Transformação: xxxx, xxxxx</li>
+												<li>Carga: xxxxx</li>
 											</ul>
 											<ul class="actions">
 												<li><a href="#" class="button">Saiba mais</a></li>
@@ -164,7 +163,7 @@
 
 									<ul class="contact">
 										<li class="icon brands fa-linkedin"> <a href="https://www.linkedin.com/in/cassiocandidoribeiro/"> LinkedIn </a> </li>
-										<li class="fa-brands fa-github"> <a href="https://github.com/CassioCandidoRibeiro"> Github </a> </li>
+										<li class="icon brands fa-github"> <a href="https://github.com/CassioCandidoRibeiro"> Github </a> </li>
 										<li class="icon solid fa-envelope"> <a href="mailto:cassiocribeiro@gmail.com"> cassiocribeiro@gmail.com </a> </li>
 									</ul>
 
