--- a/index.html
+++ b/index.html
@@ -41,12 +41,14 @@
 									<header class="major">
 										<h2>Sobre mim</h2>
 									</header>
-										<p>
-											Meu nome é <b>Cássio Cândido Ribeiro</b>, tenho 33 anos, e sou de Foz do Iguaçu, PR.
-										</p>
-										<span class="image object">
-											<img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 300px; height: 300px;" />
-										</span>
+										<div style="display: flex; align-items: center;">
+										  <span class="image object">
+										    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 300px; height: 300px;" />
+										  </span>
+										  <p style="margin-left: 20px;">
+										    Meu nome é <b>Cássio Cândido Ribeiro</b>, tenho 33 anos, e sou de Foz do Iguaçu, PR.
+										  </p>
+										</div>
 									
 								</section>
 							<!-- Habilidades -->
@@ -112,7 +114,8 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 100" alt="Curry" /></a>
+											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 100px" alt="Curry" /></a>
+											</br>
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
@@ -135,7 +138,8 @@
 										</article>
 										
 										<article>
-											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 100" alt="Imagem" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 100px" alt="Imagem" /></a>
+											</br>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
 											</p>
