--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
 									</header>
 										<div style="display: flex; align-items: center;">
 										  <span class="image object">
-										    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 300px; height: 300px;" />
+										    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 200px; height: 300px;" />
 										  </span>
 										  <p style="margin-left: 20px;">
-										    Meu nome é <b>Cássio Cândido Ribeiro</b>, tenho 33 anos, e sou de Foz do Iguaçu, PR.
+											<li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
+											<li>Idade:	33</li>
+											<li>Cidade:	Foz do Iguaçu, PR.</li>
 										  </p>
 										</div>
 									
@@ -114,7 +116,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 100px" alt="Curry" /></a>
+											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
 											</br>
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
@@ -138,7 +140,7 @@
 										</article>
 										
 										<article>
-											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 100px" alt="Imagem" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 200px" alt="Imagem" /></a>
 											</br>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
