--- a/index.html
+++ b/index.html
@@ -42,15 +42,25 @@
 										<h2>Sobre mim</h2>
 									</header>
 										<div style="display: flex; align-items: center;">
-										  <span class="image object">
-										    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 200px; height: 300px;" />
-										  </span>
-										  <p style="margin-left: 20px;">
-											<li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
-											<li>Idade:	33</li>
-											<li>Cidade:	Foz do Iguaçu, PR.</li>
+										  <p style="flex: 1; margin-left: 20px;">
+										    <ul>
+										      <li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
+										      <li>Idade:	33</li>
+										      <li>Cidade:	Foz do Iguaçu, PR.</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										      <li>Idade:	33</li>
+										    </ul>
 										  </p>
+										  <span class="image object">
+										    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 200px; height: 200px;" />
+										  </span>
 										</div>
+
 									
 								</section>
 							<!-- Habilidades -->
