--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										<h2>Sobre mim</h2>
 									</header>
 										<div style="display: flex; align-items: center;">
-										  <p style="flex: 1; margin-left: 20px;">
+										  <p style="flex: 1; margin-rightt: 20px;">
 										    <ul>
 										      <li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
 										      <li>Idade:	33</li>
