--- a/index.html
+++ b/index.html
@@ -50,14 +50,12 @@
 									  <p style="flex: 1; margin-left: 20px;">
 									    <ul>
 									      <li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
-									      <li>Idade:	33</li>
-									      <li>Cidade:	Foz do Iguaçu, PR.</li>
-									      <li>Superior incompleto:	Química e Psicologia</li>
-									      <li>Cursando:	Filosofia</li>
-									      <li>Idade:	33</li>
-									      <li>Idade:	33</li>
-									      <li>Idade:	33</li>
-									      <li>Idade:	33</li>
+									      <li>Idade: 33</li>
+									      <li>Cidade: Foz do Iguaçu, PR.</li>
+									      <li>Formação acadêmica: atualmente cursando Licenciatura em Filosofia.</li>
+									      <li>Profissão anterior: Assistente Administrativo da prefeitura de Toledo, PR.</li>
+									      <li>Objeto atual: a primeira oportunidade como começar uma carreira como Cientista de Dados.</li>
+
 									      <li>Idade:	33</li>
 									    </ul>
 									  </p>
