--- a/index.html
+++ b/index.html
@@ -52,13 +52,18 @@
 									      <li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
 									      <li>Idade: 33</li>
 									      <li>Cidade: Foz do Iguaçu, PR.</li>
-									      <li>Formação acadêmica: atualmente cursando Licenciatura em Filosofia.</li>
+									      <li>Superior incompleto: Química, Psicologia, e atualmente cursando Filosofia.</li>
 									      <li>Profissão anterior: Assistente Administrativo da prefeitura de Toledo, PR.</li>
 									      <li>Objeto atual: a primeira oportunidade como começar uma carreira como Cientista de Dados.</li>
-
-									      <li>Idade:	33</li>
 									    </ul>
 									  </p>
+									<p>
+										<li>Sempre tive curiosidade para entender como o mundo funciona,
+											sempre gostei de estudar e pesquisar, 
+											sempre fui meio cético, era mais teórico do que prático, 
+											eu preferia conhecer as teorias em vez das tecnologias, 
+											mas nunca quis seguir carreira acadêmica.</li>
+									</p>
 									</div>
 								</section>
 						
