--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
 									    </ul>
 									  </p>
 									<p>
-										<li>Sempre tive curiosidade para entender como o mundo funciona,
-											sempre gostei de estudar e pesquisar, 
-											sempre fui meio cético, era mais teórico do que prático, 
-											eu preferia conhecer as teorias em vez das tecnologias, 
-											mas nunca quis seguir carreira acadêmica.</li>
+										Sempre tive curiosidade para entender como o mundo funciona,
+										sempre gostei de estudar e pesquisar, 
+										sempre fui meio cético e de raciocínio científico, 
+										eu era mais teórico do que prático, 
+										preferia conhecer as teorias em vez das tecnologias,
+										pensava mais em entender os problemas em vez de resolvê-los,
+										mas no fundo eu nunca quis seguir carreira acadêmica.
 									</p>
 									</div>
 								</section>
