--- a/index.html
+++ b/index.html
@@ -47,43 +47,33 @@
 									  <span class="image object">
 									    <img src="images/profile-pic.png" alt="Foto do perfil" style="border-radius: 50%; width: 200px; height: 200px;" />
 									  </span>
-									  <p style="flex: 1; margin-left: 20px;">
-									    <ul>
-									      <li>Nome:	<b>Cássio Cândido Ribeiro</b></li>
-									      <li>Idade: 33</li>
-									      <li>Cidade: Foz do Iguaçu, PR.</li>
-									      <li>Superior incompleto: Química, Psicologia, e atualmente cursando Filosofia.</li>
-									      <li>Profissão anterior: Assistente Administrativo da prefeitura de Toledo, PR.</li>
-									      <li>Objetivo atual: a primeira oportunidade para começar uma carreira como Cientista de Dados.</li>
-									    </ul>
-									  </p>
+
 										<p>
-										Sempre tive curiosidade para entender como o Universo funciona,
-										sempre gostei de estudar e pesquisar, 
-										sempre fui meio cético e de raciocínio científico, 
-										eu era mais teórico do que prático, 
-										preferia conhecer as teorias em vez das tecnologias,
-										pensava mais em entender os problemas em vez de resolvê-los,
-										mas no fundo eu nunca quis seguir carreira acadêmica. 
-										</p>
-										<p>Para entender melhor sobre como funciona o mundo material acabei indo estudar Química, 
-										onde estudei Cálculo, Estatística, Física, além de Química Analítica, Orgânica, Inorgânica e tive minha iniciação científica. 
-										Mas, no meio do curso, comecei a me interessar muito pelo cérebro, que é o objeto que torna possível o nosso conhecimento, 
-										e resolvi abandonar o curso de Química para ir cursar Psicologia, 
-										onde estudei sobre as emoções, sentimentos e o comportamento, e conheci a Filosofia, que eu não tive acesso na época de colégio. 
-										</p>
-										<p>Foi no curso de Filosofia que mais profundei os meus conhecimentos. 
-										Gosto muito das disciplinas de Epistemologia (Teoria do conhecimento), Metafísica,
-										Retórica e Lógica (fui monitor desta disciplina para os calouros por 2 anos seguidos).										
-										Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
-										</p>
-										<p>Em meados de 2022 fiz um curso de Tecnologia da Informação e Comunicação, 
-										promovido Parque Tecnológico Itaipu (PTI), onde tivemos aulas de 
-										Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
-										Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
-										</p>
-										<p>Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da Comunidade DS, 
-										para iniciar uma carreira como Cientista de Dados. 
+											Meu nome é <b>Cássio Cândido Ribeiro</b>, tenho 33, sou de Foz do Iguaçu, PR.
+											Sempre tive curiosidade para entender como o Universo funciona,
+											sempre gostei de estudar e pesquisar, 
+											sempre fui meio cético e de raciocínio científico, 
+											eu era mais teórico do que prático, 
+											preferia conhecer as teorias em vez das tecnologias,
+											pensava mais em entender os problemas em vez de resolvê-los,
+											mas no fundo eu nunca quis seguir carreira acadêmica. 
+											</p>
+											<p>Para entender melhor sobre como funciona o mundo material acabei indo estudar Química, 
+											onde estudei Cálculo, Estatística, Física, além de Química Analítica, Orgânica, Inorgânica e tive minha iniciação científica. 
+											Mas, no meio do curso, comecei a me interessar muito pelo cérebro, que é o objeto que torna possível o nosso conhecimento, 
+											e resolvi abandonar o curso de Química para ir cursar Psicologia, 
+											onde estudei sobre as emoções, sentimentos e o comportamento, e conheci a Filosofia, que eu não tive acesso na época de colégio. 
+											Foi no curso de Filosofia que mais profundei os meus conhecimentos. 
+											Gosto muito das disciplinas de Epistemologia (Teoria do conhecimento), Metafísica,
+											Retórica e Lógica (fui monitor desta disciplina para os calouros por 2 anos seguidos).										
+											Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
+											</p>
+											<p>Em meados de 2022 fiz um curso de Tecnologia da Informação e Comunicação, 
+											promovido Parque Tecnológico Itaipu (PTI), onde tivemos aulas de 
+											Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
+											Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
+											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da Comunidade DS, 
+											para iniciar uma carreira como Cientista de Dados. 
 										</p>
 									</div>
 								</section>
