--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 											Sempre tive curiosidade para entender como o Universo funciona,
 											sempre gostei de estudar e pesquisar, 
 											sempre fui meio cético e de raciocínio científico, 
-											eu era mais teórico do que prático, 
+											eu tendia a ser mais teórico do que prático, 
 											preferia conhecer as teorias em vez das tecnologias,
 											pensava mais em entender os problemas em vez de resolvê-los,
-											mas no fundo eu nunca quis seguir carreira acadêmica. 
+											e no fundo eu nunca quis seguir carreira acadêmica. 
 											</p>
 											<p>Para entender melhor sobre como funciona o mundo material acabei indo estudar Química, 
 											onde estudei Cálculo, Estatística, Física, além de Química Analítica, Orgânica, Inorgânica e tive minha iniciação científica. 
@@ -70,7 +70,7 @@
 											Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
 											</p>
 											<p>Em meados de 2022 fiz um curso de Tecnologia da Informação e Comunicação, 
-											promovido Parque Tecnológico Itaipu (PTI), onde tivemos aulas de 
+											promovido pelo Parque Tecnológico Itaipu (PTI), onde tivemos aulas de 
 											Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
 											Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
 											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da Comunidade DS, 
