--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 											Retórica e Lógica (fui monitor desta disciplina para os calouros por 2 anos seguidos).										
 											Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
 											</p>
-											<p>Em meados de 2022 fiz um curso de Tecnologia da Informação e Comunicação, 
-											promovido pelo Parque Tecnológico Itaipu (PTI), onde tivemos aulas de 
-											Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
+											<p>Em meados de 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) 
+											do Parque Tecnológico Itaipu (PTI-BR), onde tivemos aulas de Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
 											Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
 											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da Comunidade DS, 
 											para iniciar uma carreira como Cientista de Dados. 
