--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 											Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
 											</p>
 											<p>Em meados de 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) 
-											do Parque Tecnológico Itaipu (PTI-BR), onde tivemos aulas de Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
+											do <b>Parque Tecnológico Itaipu</b> (PTI-BR), onde tivemos aulas de Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
 											Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
-											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da Comunidade DS, 
+											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da <b>Comunidade DS</b>, 
 											para iniciar uma carreira como Cientista de Dados. 
 											</p>
 									</div>
@@ -143,8 +143,8 @@
 									<div class="posts">
 										<article>
 											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
-											</br>
-											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
+											
+											<h3></br>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
 												junto com ferramentas de desenvolvimento web como Streamlit e Github, 
