--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
+											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 300px" alt="Curry" /></a>
 											
-											<h3></br>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
+											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
 												junto com ferramentas de desenvolvimento web como Streamlit e Github, 
@@ -166,7 +166,7 @@
 										</article>
 										
 										<article>
-											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 200px" alt="Imagem" /></a>
+											<a href="#" class="image"><img src="https://i2-prod.dailystar.co.uk/incoming/article20279708.ece/ALTERNATES/s615b/0_Robot-thinking-close-up.jpg" style="border-radius: 10%; width: 300px" alt="Imagem" /></a>
 											</br>
 											<h3>Identificação de imóveis para compra e revenda a fim de maximizar o lucro</h3>
 											<p>Identificação de imóveis abaixo do preço médio de venda e definição do preço ideal de revenda, a partir de uma análise exploratória de dados em Python.
