--- a/index.html
+++ b/index.html
@@ -50,30 +50,26 @@
 										<br></br>
 
 											<p>
-											Meu nome é <b>Cássio Cândido Ribeiro</b>, tenho 33, sou de Foz do Iguaçu, PR.
+											Meu nome é <b>Cássio Cândido Ribeiro</b>, sou de Foz do Iguaçu, PR.
 											Sempre tive curiosidade para entender como o Universo funciona,
-											sempre gostei de estudar e pesquisar, 
 											sempre fui meio cético e de raciocínio científico, 
-											eu tendia a ser mais teórico do que prático, 
-											preferia conhecer as teorias em vez das tecnologias,
-											pensava mais em entender os problemas em vez de resolvê-los,
-											e no fundo eu nunca quis seguir carreira acadêmica. 
+											preferia conhecer as teorias em vez das tecnologias.
 											</p>
-											<p>Para entender melhor sobre como funciona o mundo material acabei indo estudar Química, 
-											onde estudei Cálculo, Estatística, Física, além de Química Analítica, Orgânica, Inorgânica e tive minha iniciação científica. 
-											Mas, no meio do curso, comecei a me interessar muito pelo cérebro, que é o objeto que torna possível o nosso conhecimento, 
-											e resolvi abandonar o curso de Química para ir cursar Psicologia, 
-											onde estudei sobre as emoções, sentimentos e o comportamento, e conheci a Filosofia, que eu não tive acesso na época de colégio. 
-											Foi no curso de Filosofia que mais profundei os meus conhecimentos. 
-											Gosto muito das disciplinas de Epistemologia (Teoria do conhecimento), Metafísica,
-											Retórica e Lógica (fui monitor desta disciplina para os calouros por 2 anos seguidos).										
-											Estudar e gostar de Lógica foi me aproximando do mundo da programação, que é um conhecimento prático e técnico.
+											<p>
+												Já fui acadêmico dos cursos de Química e Psicologia e atualmente Filosofia.
+												No fim acabei desistindo de seguir carreira acadêmica e estou migrando de área.
+												Comecei a me interessar por programação por causa da disciplina de Lógica no curso de Filosofia, 
+												E estudar Lógica foi me aproximando do mundo da programação.
 											</p>
-											<p>Em meados de 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) 
-											do <b>Parque Tecnológico Itaipu</b> (PTI-BR), onde tivemos aulas de Introdução à Web, Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end.
-											Depois de um tour pelas áreas da programação, descobri que tenho perfil para a área de dados.
-											Foi então que estudando e pesquisando sobre as profissões relacionadas que decidi começar a trilhar o curso da <b>Comunidade DS</b>, 
-											para iniciar uma carreira como Cientista de Dados. 
+											<p>
+												Em meados de 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) 
+												do <b>Parque Tecnológico Itaipu</b> (PTI-BR), 
+												onde tivemos aulas de Introdução à Web, Banco de Dados e Cloud , 
+												Lógica de Programação, Back-end, e Front-end.
+												Depois de um panorama geral das áreas da programação, descobri que tenho perfil para a área de dados.
+												Então pesquisando sobre as profissões, 
+												decidi começar a trilhar o curso da <b>Comunidade DS</b>, 
+												para iniciar a carreira como Cientista de Dados. 
 											</p>
 									</div>
 								</section>
