--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 									  </div>
 									  <div style="flex: 1; margin-left: 20px;">
 									    <p>
-									      Meu nome é <b>Cássio Cândido Ribeiro</b>, sou de Foz do Iguaçu, PR. Gosto de trocar idéia sobre ciência, tecnologia, filosofia e religião.
+									      Meu nome é <b>Cássio Cândido Ribeiro</b>, sou de Foz do Iguaçu, PR. Gosto de trocar idéias sobre ciência, tecnologia, filosofia e religião.
 									    </p>
 									    <p>
 										    Já fui acadêmico dos cursos de Química e Psicologia e atualmente Filosofia. 
 										    Comecei a me interessar por programação por causa da disciplina de Lógica no curso de Filosofia.
-										    Mas no fim acabei desistindo de seguir carreira acadêmica e estou migrando para a área de dados. 
+										    No fim, acabei desistindo de seguir carreira acadêmica, e agora estou migrando para a área de dados. 
 									    </p>
 									    <p>
 										    Em 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) do 
