--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@
 										<article>
 											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
 											
-											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na India.</h3>
+											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na Índia.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
 												pensamento estratégico e lógica de negócio, 
 												junto com ferramentas de desenvolvimento web como Streamlit e Github, 
 												foram utilizados para criar um painel gerencial 
 												com as principais métricas de uma empresa marketplace 
-												de delivery de comida na India.</p>
+												de delivery de comida na Índia.</p>
 											<p>O resultado final do projeto foi um painel hospedado em um ambiente Cloud 
 												e disponível através de um link web. O painel pode ser acessado por 
 												qualquer dispositivo conectado na internet.</p>
