--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 												<li>Carga: Streamlit Cloud, Github</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Clique aqui para interagir com o aplicativo</a></li>
+												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Link para o App </a></li>
 											</ul>
 										</article>
 										
@@ -192,6 +192,7 @@
 
 									<ul class="contact">
 										<li class="icon brands fa-linkedin"> <a href="https://www.linkedin.com/in/cassiocandidoribeiro/"> LinkedIn </a> </li>
+										<li class="icon brands fa-github"><a href="https://github.com/CassioCandidoRibeiro">GitHub</a></li>
 										<li class="icon solid fa-envelope"> <a href="mailto:cassiocribeiro@gmail.com"> cassiocribeiro@gmail.com </a> </li>
 									</ul>
 
