--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 												<li>Carga: Streamlit Cloud, Github</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Link para o App </a></li>
+												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Curry Company App</a></li>
 											</ul>
 										</article>
 										
