--- a/index.html
+++ b/index.html
@@ -188,11 +188,10 @@
 									<header class="major">
 										<h2>Contato</h2>
 									</header>
-									<h4>Sinta-se a vontade para entrar em contato comigo por alguma dessas opções:</h4><br>
+									<h4>Sinta-se a vontade para entrar em contato comigo pelo LinkedIn ou por e-mail.</h4><br>
 
 									<ul class="contact">
 										<li class="icon brands fa-linkedin"> <a href="https://www.linkedin.com/in/cassiocandidoribeiro/"> LinkedIn </a> </li>
-										<li class="icon brands fa-github"><a href="https://github.com/CassioCandidoRibeiro">GitHub</a></li>
 										<li class="icon solid fa-envelope"> <a href="mailto:cassiocribeiro@gmail.com"> cassiocribeiro@gmail.com </a> </li>
 									</ul>
 
