--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
+											<a href="https://github.com/CassioCandidoRibeiro/Curry_Company" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
 											
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na Índia.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
