--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://github.com/CassioCandidoRibeiro/Curry_Company" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
+											<a href="https://cassiocandidoribeiro-curry-company.streamlit.app" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
 											
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na Índia.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
@@ -159,7 +159,7 @@
 												<li>Carga: Streamlit Cloud, Github</li>
 											</ul>
 											<ul class="actions">
-												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app/" class="button">Curry Company App</a></li>
+												<li><a href="https://github.com/CassioCandidoRibeiro/Curry_Company" class="button">Código</a></li>
 											</ul>
 										</article>
 										
