--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<span class="fa-solid fa-computer-classic"></span>
 											<div class="content">
 												<h3>Programação e Banco de Dados
 												</h3>
@@ -94,7 +94,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<span class="icon solid fa-solid fa-robot"></span>
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
