--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-signal"></span>
+											<span class="fa-solid fa-cloud-arrow-up"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
