--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Portfólio de projetos em Ciência de Dados: Cássio Cândido Ribeiro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-Dw28z3qKuStJp51n+9uPOOoTq3tLnmz+b0zW8AmdrsfQRZQ2WI7AuRm1W8XvXmJ1" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
