--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 		<title>Portfólio de projetos em Ciência de Dados: Cássio Cândido Ribeiro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-Dw28z3qKuStJp51n+9uPOOoTq3tLnmz+b0zW8AmdrsfQRZQ2WI7AuRm1W8XvXmJ1" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
@@ -85,7 +84,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="fa-fw fa-lg fa-solid fa-computer-classic"></span>
+											<span class="fa-solid fa-terminal"></span>
 											<div class="content">
 												<h3>Programação e Banco de Dados
 												</h3>
@@ -112,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="fa-fw fa-lg fa-solid fa-cloud-upload-alt"></span>
+											<span class="fa-regular fa-cloud-arrow-up"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
