--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 -->
 <html>
 	<head>
-		<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 		<title>Portfólio de projetos em Ciência de Dados: Cássio Cândido Ribeiro</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -112,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="fa-regular fa-cloud-arrow-up"></span>
+											<span class="material-icons"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
