--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									</header>
 									<div class="features">
 										<article>
-											<span class="fa-solid fa-cloud-arrow-up"></span>
+											<span class="fa-solid fa-terminal"></span>
 											<div class="content">
 												<h3>Programação e Banco de Dados
 												</h3>
@@ -111,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="material-icons"></span>
+											<span class="fa-solid fa-cloud"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
