--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-solid fa-cloud-arrow-up"></span>
+											<span class="icon solid fa-chart-line"></span>
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<ul>
@@ -111,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-solid fa-cloud-arrow-up"></span>
+											<span class="icon solidfa-cloud-arrow-up"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
