--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									    <p>
 										    Já fui acadêmico dos cursos de Química e Psicologia e atualmente Filosofia. 
 										    Comecei a me interessar por programação por causa da disciplina de Lógica no curso de Filosofia.
-										    No fim, acabei desistindo de seguir carreira acadêmica, e agora estou migrando para a área de dados. 
+										    No fim, decidi trocar a carreira acadêmica pela a área de dados. 
 									    </p>
 									    <p>
 										    Em 2022, participei do primeiro Programa de Talentos em Tecnologia da Informação e Comunicação (TIC) do 
