--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									  </div>
 									  <div style="flex: 1; margin-left: 20px;">
 									    <p>
-									      Meu nome é <b>Cássio Cândido Ribeiro</b>, sou de Foz do Iguaçu, PR. Gosto de trocar idéias sobre ciência, tecnologia, filosofia e religião.
+									      Meu nome é <b>Cássio Cândido Ribeiro</b>, sou de Foz do Iguaçu, PR. E eu gosto muito de trocar idéias sobre ciência e filosofia.
 									    </p>
 									    <p>
 										    Já fui acadêmico dos cursos de Química e Psicologia e atualmente Filosofia. 
