--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<li>Estatística descritiva: média, densidade, mediana, assimetria, desvio padrão, dispersão.</li>
+													<li>Estatística descritiva: densidade,assimetria, dispersão.</li>
 												</ul>											</div>
 										</article>
 										<article>
