--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon regular fa-regular fa-robot"></span>
+											<span class="icon fa-regular fa-robot"></span>
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
-													<li>Estatística descritiva: densidade,assimetria, dispersão.</li>
+													<li>Estatística descritiva: densidade, assimetria, dispersão.</li>
 												</ul>											</div>
 										</article>
 										<article>
@@ -111,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon regular fa-regular fa-cloud-arrow-up"></span>
+											<span class="icon fa-regular fa-cloud-arrow-up"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
@@ -130,7 +130,7 @@
 									<!-- Content -->
 										<h3 id="content">1. Ciência de Dados</h3>
 										<h3 id="content"></h3>
-										<p>Esterfiesticonrelatórios e métricateakholder".</p>
+										<p>1... ".</p>
 										
 								</section>
 							<!-- Projetos -->
