--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon fa-regular fa-robot"></span>
+											<span class="icon solid fa-regular fa-robot"></span>
 											<div class="content">
 												<h3>Estatística e Machine Learning</h3>
 												<ul>
@@ -111,7 +111,7 @@
 												</ul>											</div>
 										</article>
 										<article>
-											<span class="icon fa-regular fa-cloud-arrow-up"></span>
+											<span class="icon solid fa-regular fa-cloud-arrow-up"></span>
 											<div class="content">
 												<h3>Cloud</h3>
 												<ul>
