--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="https://cassiocandidoribeiro-curry-company.streamlit.app" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
+											<a href="#" class=""><img src="https://raw.githubusercontent.com/CassioCandidoRibeiro/Curry_Company/main/logo.png" style="border-radius: 10%; width: 200px" alt="Curry" /></a>
 											
 											<h3>Dashboard estratégico para uma empresa marketplace de entrega de comida na Índia.</h3>
 											<p>Nesse projeto, conceitos de programação, técnicas de manipulação de dados, 
@@ -149,6 +149,9 @@
 											</ul>
 											<ul class="actions">
 												<li><a href="https://github.com/CassioCandidoRibeiro/Curry_Company" class="button">Código</a></li>
+											</ul>
+											<ul class="actions">
+												<li><a href="https://cassiocandidoribeiro-curry-company.streamlit.app" class="button">▶️ App</a></li>
 											</ul>
 										</article>
 										
