--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 											do <b>Parque Tecnológico Itaipu</b> (PTI-BR), 
 											onde tivemos aulas de Introdução à Web, 
 											Banco de Dados e Cloud , Lógica de Programação, Back-end, e Front-end. 
-											Depois de uma visão geral das áreas de programação, 
+											E depois de uma visão geral das áreas de programação, 
 											fui descobrindo que o meu perfil tende a combinar melhor com a área de dados. 
 											Então, pesquisando sobre as profissões, decidi trilhar o curso da <b>Comunidade DS</b>, para iniciar a carreira como Cientista de Dados. 
 									    	</p>
 										<p>
 											Atualmente, estou mergulhado nos estudos de programação para análise de dados, como Python e SQL, 
-											também estou aprendendo sobre técnicas de modelagem estatística e Machine Learning, 
-											além de métricas de negócios e Econometria, 
+											também estou aprendendo técnicas de modelagem estatística e Machine Learning, 
+											além de métricas de negócio e Econometria, 
 											que são fundamentais para a minha futura atuação profissional. 
 										</p>
 										  
