--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
 											<div class="content">
 												<h3>Visualização de Dados</h3>
 												<ul>
-													<li>Gráficos: Plotly e Matplotlib</li>
-													<li>Mapas: GeoPy e Folium</li>
+													<li>Dashboards: Python e Power BI</li>
 												</ul>											</div>
 										</article>
 										<article>
