--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 									
 									<div style="display: flex; flex-direction: column; align-items: center;">
 									  <div class="image object">
-									    <img src="images/profile-pic.png" alt="Foto do perfil" style="max-width: 100%; height: auto; border-radius: 50%; width: 200px; height: 200px;"/>
+									    <img src="images/profile-pic.png" alt="Foto do perfil" style="max-width: 100%; height: auto; border-radius: 50%; width: 200px; max-height: 200px;"/>
 									  </div>
 									  <div style="margin-top: 20px;">
 										
